--- a/LLClient/Components/Layout/NavMenu.razor
+++ b/LLClient/Components/Layout/NavMenu.razor
@@ -1,21 +1,12 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">LLClient</a>
-    </div>
-</div>
-
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
+﻿<div class="nav-bar" onclick="document.querySelector('.navbar-toggler').click()">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="search">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>Search
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -23,5 +14,4 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
-    </nav>
 </div>
